<resources>
    <string name="app_name">Community Garden Manager</string>
    <string name="welcome">Welcome to CGM</string>
    <string name="welcome_more">Please login or sign up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_button">Create A Garden</string>
    <string name="join_garden">Join A Garden</string>
    <string name="num_garden_text">Number of gardens</string>
    <string name="status">Status: </string>
    <string name="update">Last updated by: </string>
    <string name="team">Team: </string>
    <string name="button_update_status">Update Status</string>
    <string name="button_update_info">Edit Info</string>
    <string name="take_me_there">Take me there</string>
    <string name="description">Description: </string>
    <string name="garden_name_default">New Garden</string>
    <string name="member_default">No member yet</string>
    <string name="description_default">No description yet</string>
    <string name="button_save">SAVE</string>
    <string name="detail">Detail: </string>
    <string name="last_updated_default">No one</string>
    <string name="status_detail_default">No detail</string>
    <string name="name">Your name:</string>
    <string name="cancel">Cancel</string>
    <string name="button_back">Back To List</string>
    <string name="reminder">Are you ready to ...</string>
    <string name="button_continue">Yes, I am!</string>
    <string name="checkbox_1">Find Interested People</string>
    <string name="checkbox_2">Form a Planning Committee</string>
    <string name="checkbox_5">Choose A Site</string>
    <string name="checkbox_3">Identify All Your Resources</string>
    <string name="checkbox_4">Approach A Sponsor</string>
    <string name="checkbox_6">Prepare And Develop The Site</string>
    <string name="checkbox_7">Organize the Garden</string>
    <string name="checkbox_8">Determine Rules and Put in Writing</string>
    <string name="checkbox_9">Make Plans for Children</string>
    <string name="checkbox_10">Collect Contact Info</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Log_in">Log in</string>
    <string name="Sign_up">Sign up</string>
    <string name="location">Location: </string>
    <string name="location_default">No location yet</string>
    <string name="Join">Join</string>
    <string name="Leave">Leave</string>
    <string name="warning_join">You cannot make changes unless you join</string>
    <string name="warning_fail">Wrong password or email</string>
    <string name="warning_invalid">Invalid input</string>
    <string name="title_activity_maps">Map</string>
    <string name="warning_no_location">No location for this garden</string>
    <string name="map_search_url">https://www.google.com/maps/search/?api=1&amp;query=</string>
    <string name="TAP_TO_EDIT">TAP TO EDIT</string>
    <string name="ONLY_SHOW">Only show my gardens</string>
    <string name="SHOW_ALL">Show all gardens</string>
</resources>
