<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itp341.liu.peixuan.finalproject.app.Fragment.ChecklistFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder"
            android:gravity="center"
            android:textSize="30dp"
            android:layout_margin="4dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_1"
            android:textSize="20dp"
            android:layout_margin="4dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_2"
            android:textSize="20dp"
            android:layout_margin="4dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_3"
            android:textSize="20dp"
            android:layout_margin="4dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_4"
            android:textSize="20dp"
            android:layout_margin="4dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_5"
            android:textSize="20dp"
            android:layout_margin="4dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_6"
            android:textSize="20dp"
            android:layout_margin="4dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_7"
            android:textSize="20dp"
            android:layout_margin="4dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_8"
            android:textSize="20dp"
            android:layout_margin="4dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_9"
            android:textSize="20dp"
            android:layout_margin="4dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_10"
            android:textSize="20dp"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/button_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="4dp"
            android:background="@android:color/holo_green_light"
            android:text="@string/button_continue"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>
