<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"

    tools:context=".Fragment.DetailFragment">

    <LinearLayout
        android:id="@+id/linearLayout_detail"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/super_light_green"
        android:layout_height="match_parent">

        <ImageButton
            android:background="@color/super_light_green"
            android:id="@+id/imageButton_detail_picture"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/garden" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_garden_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"
                android:text="@string/garden_name_default"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="italic" />

            <Button
                android:visibility="invisible"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:background="@android:color/holo_green_light"
                android:text="@string/Join"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:id="@+id/buttonJoin" />
        </RelativeLayout>

        <LinearLayout
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginEnd="4dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textView_status"
                android:layout_marginEnd="4dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="Good"
                android:textColor="@color/dark_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp">

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView_status_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:textColor="@color/dark_grey"
                android:text="@string/status_detail_default"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp">

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textColor="@android:color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView_last_updated_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:textColor="@color/dark_grey"
                android:text="@string/last_updated_default"
                android:textSize="15dp" />
        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            android:layout_below="@+id/listGardenLeader"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:text="@string/team"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/textView_members"
                android:textColor="@color/dark_grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_default"
                android:textSize="15dp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:id="@+id/divider"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            android:layout_below="@+id/listGardenLeader"
            android:layout_alignParentStart="true" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp" />

            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/textView_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_default"
                android:textColor="@color/dark_grey"
                android:textSize="15dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:id="@+id/divider2"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            android:layout_below="@+id/listGardenLeader"
            android:layout_alignParentStart="true" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp" />

            <TextView
                android:textStyle="italic"
                android:clickable="true"
                android:layout_marginLeft="10dp"
                android:id="@+id/textView_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_default"
                android:textColor="@color/blue"
                android:textSize="15dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_margin="2dp"
                android:id="@+id/button_update_status"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/button_update_status"
                android:background="@android:color/holo_green_light"
                android:textColor="@color/cardinal"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <Button
                android:layout_margin="2dp"
                android:id="@+id/button_update_info"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@android:color/holo_green_light"
                android:text="@string/button_update_info" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
