<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout_edit_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itp341.liu.peixuan.finalproject.app.Fragment.EditInfoFragment">

    <LinearLayout
        android:id="@+id/linearLayout_edit_info"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:background="@color/super_light_green"
                android:id="@+id/imageButton_edit_picture"
                android:layout_width="match_parent"
                android:layout_height="120dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColorHighlight="@color/black"
                android:textColor="@color/white"
                android:text="@string/TAP_TO_EDIT" />
        </RelativeLayout>


        <EditText
            android:layout_gravity="center"
            android:id="@+id/editText_edit_garden_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/garden_name_default"
            android:textColor="@color/black"
            android:textSize="25dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            </RelativeLayout>

            <EditText
                android:layout_marginLeft="10dp"
                android:id="@+id/editText_edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_default"
                android:textSize="15dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/location"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            </RelativeLayout>

            <EditText
                android:layout_marginLeft="10dp"
                android:id="@+id/editText_edit_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_default"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_save_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@android:color/holo_green_light"
                android:text="@string/button_save" />
            <Button
                android:id="@+id/button_cancel_info"
                android:layout_margin="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@android:color/holo_green_light"
                android:text="@string/cancel"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
