<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itp341.liu.peixuan.finalproject.app.Fragment.GardenListFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_margin="4dp"
                android:id="@+id/buttonNewGarden"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/add_new_button"
                android:background="@android:color/holo_green_light">
            </Button>

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup_show"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioButton_show_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/SHOW_ALL"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioButton_only_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/ONLY_SHOW"/>
        </RadioGroup>


        <ListView
            android:id="@+id/gardenFragmentList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null">
        </ListView>
    </LinearLayout>
</FrameLayout>