<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/frameLayout_edit_info"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="itp341.liu.peixuan.finalproject.app.Fragment.UpdateStatusFragment">

<LinearLayout
    android:id="@+id/linearLayout_update_status"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itp341.liu.peixuan.finalproject.app.Fragment.UpdateStatusFragment">>

    <ImageButton
        android:id="@+id/image_edit_picture"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/garden" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/text_status_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/status"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/spinner_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/text_status_update"
                android:layout_alignBaseline="@id/text_status_update"
                android:entries="@array/status">
            </Spinner>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/text_detail_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/detail"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editText_status_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/text_detail_update"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:background="@android:color/holo_green_light"
            android:id="@+id/button_save_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/button_save"
            android:layout_margin="4dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_cancel_status"
            android:background="@android:color/holo_green_light"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="4dp"
            android:text="@string/cancel"/>
    </LinearLayout>

</LinearLayout>

</FrameLayout>
